--- a/start.html
+++ b/start.html
@@ -123,6 +123,6 @@
     <footer>
         <p>&copy; 2025 Sunnyville Cultural Fair. All rights reserved.</p>
     </footer>
-
+<span></span>
 </body>
 </html>
