--- a/demo.html
+++ b/demo.html
@@ -3,23 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Let's try it</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Personal Blog</title>
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
-    <h1>my first javascript coding</h1>
-    <p>it's look easy and nice</p>
-    <p id="demo"></p>
-    <script>
-        var person = {
-            firstName : "Rahmani",
-            lastName : "Said",
-            Age : 25,
-            eyeColour : "brown",
-            fullName : function(){
-                return this.firstName + " " + this.lastName
-            }
-        }
-        document.getElementById("demo").innerHTML = person.fullName();
-    </script>
+    <header>
+        <h1>Welcome to My Personal Blog</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#posts">Blog Posts</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="home">
+            <h2>Introduction</h2>
+            <p>This is a place where I share my thoughts and experiences. Stay tuned for more updates!</p>
+        </section>
+
+        <section id="about">
+            <h2>About Me</h2>
+            <p>I am a passionate writer and developer who enjoys sharing knowledge on various topics.</p>
+        </section>
+
+        <section id="posts">
+            <h2>Latest Blog Posts</h2>
+            <article>
+                <h3>My First Blog Post</h3>
+                <p>Welcome to my first blog post! Here, I’ll be discussing web development basics and more.</p>
+                <a href="blog-post1.html">Read More</a>
+            </article>
+            <article>
+                <h3>Exploring HTML Elements</h3>
+                <p>In this post, we will delve deeper into HTML elements such as block-level and inline elements.</p>
+                <a href="blog-post2.html">Read More</a>
+            </article>
+        </section>
+
+        <aside>
+            <h3>Navigation</h3>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#posts">Blog Posts</a></li>
+            </ul>
+        </aside>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 My Personal Blog | Contact: myemail@example.com</p>
+    </footer>
 </body>
 </html>
